<resources>
    <string name="app_name">"Rucoy calculator"</string>
    <string name="title_train">"Train &amp; Dmg"</string>
    <string name="title_ptrain">"Power train"</string>
    <string name="title_credits">"Credits"</string>
    <string name="title_skull">"Stat info"</string>
    <string name="base_level">"Base level"</string>
    <string name="stat_level">"Stat level (with buffs)"</string>
    <string name="weapon_atk">"Weapon attack"</string>
    <string name="stat_goal">"Stat goal"</string>
    <string name="hours">"Hours"</string>
    <string name="tick">"Tick (default is 4)"</string>
    <string name="tickrate_help">"What is tick?"</string>
    <string name="tickrate_tooltip">"It's how many mobs you can hit with 1 power attack!"</string>
    <string name="prtain_switch">"Power training"</string>
    <string-array name="classes_array">
        <item>"Melee ⚔️"</item>
        <item>"Distance 🏹"</item>
        <item>"Magic 🪄"</item>
    </string-array>
    <string name="melee">"Melee ⚔️"</string>
    <string name="distance">"Distance 🏹"</string>
    <string name="magic">"Magic 🪄"</string>
    <string-array name="train_methods_array">
        <item>"⚔️ Online Training"</item>
        <item>"🔥 Power training"</item>
        <item>"💤 Offline training"</item>
        <item>"💪 Damage"</item>
        <item>"🛡️ Defense (Under construction)"</item>
    </string-array>
    <string name="credits_content">"This is an unofficial application made by helloyanis Training formulas by Mims Code (sometimes) by ChatGPT! This app is free and open-source! Check out the GitHub! Support me to help me keep maintaining this application and add new features! A feature idea? A bug report? Go on GitHub and open an issue!"</string>
    <string name="github">"GitHub"</string>
    <string name="privacy">"Privacy policy"</string>
    <string name="support_me">"❤️ Support me!"</string>
    <string name="rate">"🌟 Rate app!"</string>
    <string name="ratebackup">"🌟 Window did not show? Click again to open Play Store."</string>
    <string name="traineffec">"👾 You can train effectively on "</string>
    <string name="ptraineffec1">"👾 You can power train your "</string>
    <string name="ptraineffec2">" on "</string>
    <string name="averagetime">"⏱️ Average time to kill "</string>
    <string name="youcandeal">"💥 You can deal "</string>
    <string name="youneednext1">"💪 You need "</string>
    <string name="youneednext2train">" stats to train effectively on "</string>
    <string name="youneednext2ptrain">" stats to power train effectively on "</string>
    <string name="maxdmg1">"⏫ Max. Damage: "</string>
    <string name="maxdmg2">" max damage to "</string>
    <string name="tickrate">" 💫 Tickrate: </string>
    <string name="inXstats1">" in "</string>
    <string name="inXstats2">" stats!\n"</string>
    <string name="mindmgauto">"⏬ Min. Damage (Auto): "</string>
    <string name="maxdmgauto">"⏫ Max. Damage (Auto): "</string>
    <string name="statgoaltoolow">"❗ Stat goal must be greater than your current stat"</string>
    <string name="offlineoutput1">💫 You need approximately "</string>
    <string name="offlineoutput2">" ticks until you reach stat level "</string>
    <string name="offlineoutput3">"⏱️ This is around "</string>
    <string name="offlineoutput4">" minutes, or </string>
    <string name="offlineoutput5">" hours of offline training at 600 exp/hr"</string>
    <string name="offlinenewstat1">⏱️ Your new stat will be approximately: "</string>
    <string name="offlinenewstat2">" with "</string>
    <string name="offlineinvalidinput">"❗Please enter either hours OR stat goal"</string>
    <string name="offlineerror">"❌ Something went wrong: Could not find new stat!"</string>
    <string name="skullGneeded">"G needed"</string>
    <string name="skullGlost">"G lost from death by player"</string>
    <string name="hp">"HP"</string>
    <string name="mp">"MP"</string>
    <string name="levelexp1">"💪 Level "</string>
    <string name="levelexp2">" is at"</string>
    <string name="levelexp3">"exp!\n"</string>
    <string name="nextlevel1">"✨ You need "</string>
    <string name="nextlevel2">" experience to reach level "</string>
    <string-array name="atk_styles_array">
        <item>"Auto attack"</item>
        <item>"⚔️ Melee special attack"</item>
        <item>"🏹 Distance special attack"</item>
        <item>"🪄 Magic special attack"</item>
    </string-array>
    <string name="auto_attack">"Auto"</string>
    <string name="special_attack">"💥 Special"</string>
    <string name="mob">"👾 "Mob"</string>
    <string name="mindmg">"⏬ Min. Damage:"</string>
    <string name="damage">"💪 Damage"</string>
    <string name="not_strong_enough">"🙁 You aren't strong enough to deal normal damage to this mob."</string>
    <string name="not_strong_enough_crit">"🙁 You aren't strong enough to deal critical damage to this mob."</string>
    <string name="maxcritdmg">"🔥 Max. critical damage"</string>
    <string name="usecritring">"Use Spiked ring (Critical hit prob. &amp; dmg up)"</string>
    <string name="infotab_nodata_title">"Base level is not set!"</string>
    <string name="infotab_nodata_desc">"Please go to the tab \"Train and damage\" and set your base level there before coming back here!"</string>
    <string name="popups_okbtn">"OK"</string>
    <string name="apptutorial_title">"Training calculator tutorial"</string>
    <string name="apptutorial_desc">"Thank you for downloading the app! You are on the main calculator screen, the online training calculator.\n❗Important info!! Click on the top button to change your training style!"</string>
    <string name="onlinetraintutorial_title">"Online training tutorial"</string>
    <string name="onlinetraintutorial_desc">"This allows you to find which mobs to hit to train effectively without losing time or arrows/mana.\nJust fill in the required info:\n- Base level: The level of your character.\n- Stat level with buffs: How much your stat level is. You can see it in the game's settings. If you have a buff (like 10+5) write the total amount here (15).\n- Weapon attack : The attack value of your training weapon. You can see it by clicking your weapon in the inventory.\n- Use Spiked Ring : If you have a spiked ring, it increases your chances of critical hits and makes you able to train on other monsters."</string>
    <string name="ptraintutorial_title">"Power training tutorial"</string>
    <string name="ptraintutorial_desc">"Power training is when you train by using your special attack to hit multiple mobs at a time. It can be faster to level up with power training, but costs a lot of mana and your defense won't follow the fast pace of power training, which means it will not upgrade the defense very much.\nOn this particular calculator, use the menu to pick your class. This is important because the magic special attack deals more damage than the others."</string>
    <string name="offlinetutorial_title">"Offline training tutorial"</string>
    <string name="offlinetutorial_desc">"Offline training is when you use the dummy to train a stat while you're offline. It is slower than to train normally, and is limited in time. You can gain time by dealing damage to monsters when you're playing, or by buying diamonds.\nYou can also get training dummies as items and it will automatically train your stat when you are away.\nIf you have multiple dummies in your inventory, the exp you will get will be split between stats, you don't get more stat points!"</string>
    <string name="damagetutorial_title">"Damage turorial"</string>
    <string name="damagetutorial_desc">"This one is pretty straightforward, based on your stats, it tells you how much damage you do to a given monster. Don't forget to pick the monster and the attack type for the correct result!"</string>
    <string name="can_not_oneshot_1">"☹️ You can't oneshot a "</string>
    <string name="can_not_oneshot_2">" yet!"</string>
    <string name="can_oneshot">"🏆 You can oneshot a "</string>
    <string name="oneshot_consistency_1">" with "</string>
    <string name="oneshot_consistency_2">"% consistency!"</string>
    <string name="defense">defense</string>
    <string name="armor">Armor</string>
    <string name="playstore_phaseOut_dialog_title">"This application is no longer available on the Google Play Store"</string>
    <string name="playstore_phaseOut_dialog_content">"Due to the fact that you are forced to reveal personal data such as your real name on Google Play, even for free and open source apps, I have decided to unpublish the app from the Google Play Store. You can now find it on F-Droid."</string>
    <string name="playstore_phaseOut_dialog_dismiss">"I understand"</string>
    <string name="playstore_phaseOut_dialog_learnMore">"Learn more"</string>
    <string name="playstore_phaseOut_faq_title">"FAQ about the removal from Google Play Store"</string>
    <string name="defensetutorial_title">"Defense tutorial"</string>
    <string name="defensetutorial_desc">"This allows you to find how much damage you can take!\nYour defense by default is in \"Higher defense\" state. If you get hit, you switch to \"Lower defense\" state, where you take more damage. This lasts for 1 second and you'll recover your \"Higher defense\" state. So getting attacked by multiple mobs at a time can make you take significantly more damage, even if they usually wouldn't damage you at all."</string>
    <string name="defensetutorial_wip_desc">"⚠️ This is NOT WORKING YET!! and uses a temporary formula to calculate it.\nTo implement this calculator, I need to know the mob's attack level. So I need your help!\nFill in the fields with your stats, and pick a mob you can get damaged by in-game. Note the damage you take, and try to adjust the values of the minimum attack and maximum attack so it matches the ones you see in-game. Then, send them to me through a GitHub issue or e-mail at rucoycalculator@outlook.fr with the mob and its attack stats so I can add it to the app in a future update!\nAlso try to change your equipment and see if it still corresponds to the calculator's value! (If not that means my formula is wrong)."</string>
    <string name="defense_level">"Defense level"</string>
    <string name="shield_armor">"Shield armor"</string>
    <string name="shield_armor_help">"The armor value of your equipped shield"</string>
    <string name="other_armor">"Other armor"</string>
    <string name="other_armor_help">"The cumulated armor of all your equipment, EXCEPT FOR the shield!"</string>
    <string name="averagetime_def">"⏱️ Average time to kill you :"</string>
    <string name="high_def">"For high defense :"</string>
    <string name="low_def">"For low defense :"</string>
    <string name="can_not_get_oneshot">"🛡️ You can't get oneshot by a "</string>
    <string name="can_oneshot_1">"☠️ You can get oneshot by a "</string>
    <string name="min_mob_atk">"Minimum mob attack"</string>
    <string name="max_mob_atk">"Maximum mob attack"</string>
    <string name="can_not_hurt_you">" This mob can't deal any damage to you!"</string>
    <string name="dont_remind_me">"Don't remind me again"</string>
</resources>
