<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_train">

    <fragment
        android:id="@+id/navigation_train"
        android:name="com.helloyanis.rucoycalculator.ui.train.TrainFragment"
        android:label="@string/title_train"
        tools:layout="@layout/train" />

    <fragment
        android:id="@+id/navigation_skull"
        android:name="com.helloyanis.rucoycalculator.ui.skull.SkullFragment"
        android:label="@string/title_skull"
        tools:layout="@layout/skull" />

    <fragment
        android:id="@+id/navigation_credits"
        android:name="com.helloyanis.rucoycalculator.ui.credits.CreditsFragment"
        android:label="@string/title_credits"
        tools:layout="@layout/credits" />
</navigation>