<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.credits.CreditsFragment">

        <TextView
            android:id="@+id/credits_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/github"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/github"
            app:layout_constraintBottom_toBottomOf="@+id/privacy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/privacy" />

        <Button
            android:id="@+id/support_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/support_me"
            app:layout_constraintBottom_toBottomOf="@+id/privacy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/privacy" />

        <Button
            android:id="@+id/privacy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/privacy"
            app:layout_constraintEnd_toStartOf="@+id/support_me"
            app:layout_constraintStart_toEndOf="@+id/github"
            app:layout_constraintTop_toBottomOf="@+id/credits_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>